--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
   background-image:url(img/background.jpg);
   font-family:"Gorgia";
   font-size:20px;
+  padding: 25px 50px 75px 50px;
 }
 h1{
 	font-family: Impact;
