--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   background-image:url(img/background.jpg);
   font-family:"Gorgia";
   font-size:20px;
-  padding: 25px 50px 75px 50px;
+  padding: 1em 3em 5em 3em;
 }
 h1{
 	font-family: Impact;
