--- a/style.css
+++ b/style.css
@@ -7,20 +7,21 @@ body{
 h1{
 	font-family: Impact;
 }
-.nav ul {
-  list-style: none;
-  background-color:#B3FAEE;
+.navigation {
+  width: 100%;
+  background-color: #333;
   text-align: center;
-  padding: 0;
-  margin: 0;
-}
-.nav li {
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.2em;
-  line-height: 40px;
-  height: 40px;
-  border-bottom: 1px solid #888;
-  display: inline-block;
-  margin-right: -4px;
 }
 
+.navigation ul {
+       list-style-type: none;
+       margin: 0;
+       padding: 0;
+       overflow: hidden;
+       background-color: #333;
+       display: inline-block;
+   }
+
+.navigation li {
+       float: left;
+   }
