--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   background-image:url(img/background.jpg);
   font-family:"Gorgia";
   font-size:20px;
-  padding: 1em 3em 5em 3em;
+ 
 }
 h1{
 	font-family: Impact;
@@ -19,9 +19,14 @@ h1{
        padding: 0;
        overflow: hidden;
        background-color: #333;
-       display: inline-block;
+       
    }
 
 .navigation li {
        float: left;
+	   display: inline-block;
+	   margin-right:5px;
+	   
    }
+   
+   
