--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@ h1{
 }
 .navigation {
   width: 100%;
-  background-color: 4682B4;
   text-align: center;
-  color: white;
 }
 
 .navigation ul {
@@ -20,13 +18,14 @@ h1{
        margin: 0;
        padding: 0;
        overflow: hidden;
-             
+       background-color: blue;      
    }
 
 .navigation li {
        float: center;
 	   display: inline-block;
 	   margin-right:10px;
+	   color: white;
 	   
    }
    
