--- a/style.css
+++ b/style.css
@@ -18,23 +18,25 @@ h1{
        margin: 0;
        padding: 0;
        overflow: hidden;
-       background-color: blue;      
+       background-color: steelblue; 
+       display: inline-block;	   
    }
 
 .navigation li {
-       float: center;
-	   display: inline-block;
+       float: center;	   
 	   margin-right:10px;
 	   color: white;
+	   line-height: 40px;
+       height: 40px;
+       border-bottom: 1px solid #888;
 	  }
 	  
 .navigation a:hover {
-  background-color: #005f5f;
+      background-color: white;
 }
 
 .navigation a.active {
-  background-color: #fff;
-  color: #444;
+  background-color: green;
   cursor: default;
 }
    
