--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1{
        }
 	  
 .navigation a:hover {
-      background-color: white;
+      background-color: gray;
 }
 
 .navigation a {
@@ -41,7 +41,7 @@ h1{
   display: block;
  
 .navigation a.active {
-  background-color: white;
+  background-color: gray;
   cursor: default;
 }
    
