--- a/style.css
+++ b/style.css
@@ -44,5 +44,19 @@ h1{
   background-color: gray;
   cursor: default;
 }
+#origine{
+	display:flex;
+	margin:20px;
+}
+.texte{
+	padding:0;
+	width:30%;
+	float:left;
+}
+.image{
+	float:left;
+	padding:0 5px;
+	width:65%;
+}
    
    
