--- a/style.css
+++ b/style.css
@@ -46,17 +46,17 @@ h1{
 }
 #origine{
 	display:flex;
-	margin:20px;
+	margin:10px;
 }
 .text{
-	padding:0;
+	margin:0 0 0 2.5%;
 	width:30%;
 	float:left;
 }
 .image{
 	float:left;
-	padding:0 2em;
-	width:65%;
+	margin:0 5%;
+	width:60%;
 }
    
    
