--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1{
        padding: 0;
        overflow: hidden;
        background-color: steelblue; 
+	   text-align: center;
        	   
    }
 
@@ -44,19 +45,17 @@ h1{
   background-color: gray;
   cursor: default;
 }
-#origine{
-	display:flex;
-	margin:50px;
+
 }
 .text{
-	margin:0 0 0 2.5%;
+	margin: 0 5%;
 	width:30%;
 	float: left;
 }
 .image{
 	float: left;
-	margin:0 5%;
 	width:60%;
+	margin: 0 5% 0 0;
 }
 .title{
 	float: left;
