--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1{
 .image{
 	float: left;
 	width:70%;
-	margin: 5% 2.5% 0 0;
+	margin: 0 2.5% 0 0;
 }
 .title{
 	float: left;
@@ -69,4 +69,14 @@ h1{
 
 @media screen and (orientation: landscape) {
   .image{ max-height: 70%; }
+}
+#summary {
+	margin: 0 2.5%;
+	width:45%;
+	float: left;
+}
+#skills {
+	float: left;
+	width:45%;
+	margin: 0 2.5%;
 }
