--- a/style.css
+++ b/style.css
@@ -70,13 +70,15 @@ h1{
 @media screen and (orientation: landscape) {
   .image{ max-height: 70%; }
 }
-#summary {
+.left {
 	margin: 0 2.5%;
 	width:45%;
 	float: left;
 }
-#skills {
+.right {
 	float: left;
 	width:45%;
 	margin: 0 2.5%;
 }
+
+
