--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ h1{
 	width:45%;
 	margin: 0 2.5%;
 }
-#experience {
-	width: 960px;
-	margin: 0 auto;
+.wrapper {
+	width: 912px;
+	margin: 2.5% 2.5%
 }
 
