--- a/style.css
+++ b/style.css
@@ -70,18 +70,39 @@ h1{
 @media screen and (orientation: landscape) {
   .image{ max-height: 70%; }
 }
-.left {
+#left1 {
 	margin: 0 2.5%;
 	width:45%;
 	float: left;
 }
-.right {
+#right1 {
 	float: left;
 	width:45%;
 	margin: 0 2.5%;
+}
+
+#left2 {
+	margin: 2.5% 2.5%;
+	width:45%;
+	float: left;
+}
+#right2 {
+	float: left;
+	width:45%;
+	margin: 2.5% 2.5%;
+}
+#left3 {
+	margin: 2.5% 2.5%;
+	width:45%;
+	float: left;
+}
+#right3 {
+	float: left;
+	width:45%;
+	margin: 2.5% 2.5%;
 }
 .wrapper {
 	width: 960px;
-	margin: 2.5% 2.5%
+	margin: 0
 }
 
