--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ h1{
 	float: left;
 }
 #contact {
-	width : 100%
-	margin : 0 auto;
+	width : 95%
+	margin : 2.5% 2.5%
 }
 @media screen and (orientation: portrait) {
   .image{ max-width: 70%; }
@@ -106,5 +106,7 @@ h1{
 	width: 100%;
     margin: 2.5% auto;
 }
-
-
+#block {
+	width : 95%
+	margin : 2.5% 2.5%
+}
