remove div on favorite

--- a/style.css
+++ b/style.css
@@ -111,6 +111,12 @@ h1{
 }
 #soccer {
     margin: 2.5% 2.5%;
-	width: 95%;
+	width: 45%;
 	float: left;
 	}
+#skiing {
+    margin: 2.5% 2.5%;
+	width: 45%;
+	float: left;
+	}
+	
