--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h1{
 	margin: 2.5% 2.5%;
 }
 
-#title {
+.title {
 	width: 100%;
     margin: 2.5% auto;
 }
@@ -119,4 +119,9 @@ h1{
 	width: 45%;
 	float: left;
 	}
+#music {
+	margin: 2.5% 2.5%;
+	width: 45%;
+	float: left;
+}
 	
