--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ section#welcome{
   padding:0;
   margin:0;
   overflow: auto;
-  background:#FFC300;
+  background:#DAF7A6;
   text-align: center;
 }
 
