--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ section#welcome{
   overflow: auto;
   background:#DAF7A6;
   text-align: center;
+  font-weight: bold;
+  font-style: italic;
 }
 
 #contact {
