--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1{
 	   color: white;
 	   line-height: 40px;
        height: 40px;
-	   display: inline-block;
+	   /**display: inline-block;*/
        }
 	  
 .navigation a:hover {
