--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1{
 	   color: white;
 	   line-height: 40px;
        height: 40px;
-	   /**display: inline-block;*/
+	   display: inline-block;
        }
 	  
 .navigation a:hover {
@@ -38,7 +38,7 @@ h1{
 .navigation a {
   text-decoration: none;
   color: white;
-  display: block;
+  /**display: block;*/
 }
 /**
 .navigation a.active {
